N1/N1/solution1/solution1.log
==============================================================
File generated on Sat Dec 30 09:18:18 +0200 2023
Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC v2018.3 (64-bit)
SW Build 2405991 on Thu Dec  6 23:38:27 MST 2018
IP Build 2404404 on Fri Dec  7 01:43:56 MST 2018
Copyright 1986-2018 Xilinx, Inc. All Rights Reserved.
==============================================================
INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [HLS 200-10] Setting target device to 'xczu9eg-ffvb1156-2-i'
INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [SCHED 204-61] Option 'relax_ii_for_timing' is enabled, will increase II to preserve clock frequency constraints.
INFO: [HLS 200-10] Analyzing design file 'N1.cpp' ... 
ERROR: [HLS 200-70] Compilation errors found: In file included from N1.cpp:1:
N1.cpp:22:25: error: use of undeclared identifier 'x'
                    sum[x][y] += powf(input[x][y][i],2);
                        ^
N1.cpp:22:28: error: use of undeclared identifier 'y'
                    sum[x][y] += powf(input[x][y][i],2);
                           ^
N1.cpp:22:45: error: use of undeclared identifier 'x'
                    sum[x][y] += powf(input[x][y][i],2);
                                            ^
N1.cpp:22:48: error: use of undeclared identifier 'y'
                    sum[x][y] += powf(input[x][y][i],2);
                                               ^
N1.cpp:34:34: error: use of undeclared identifier 'gamma'
    normalization(input, output, gamma, beta);
                                 ^
5 errors generated.
